--- a/views/user/detail.ejs
+++ b/views/user/detail.ejs
@@ -5,7 +5,7 @@
 <div class="w-[90%] mx-auto">
 
     <div class="text-sm breadcrumbs text-gray-500 mb-6">
-        <a href="/" class="hover:text-blue-600">Home</a> 
+        <a href="/books" class="hover:text-blue-600">Home</a> 
         <span class="mx-2">/</span> 
         <span class="text-gray-700">Detail Result</span>
         <span class="mx-2">/</span>
@@ -16,8 +16,8 @@
         <% 
             const hasOrigin = query.origin_page; 
             const backUrl = hasOrigin 
-                ? `/search?q=${query.origin_q || ''}&searchBy=${query.origin_searchBy || 'title'}&matchType=${query.origin_matchType || 'contains'}&category=${query.origin_category || ''}&subject=${query.origin_subject || ''}&year=${query.origin_year || ''}&page=${query.origin_page || 1}`
-                : '/';
+                ? `/books/search?q=${query.origin_q || ''}&searchBy=${query.origin_searchBy || 'title'}&matchType=${query.origin_matchType || 'contains'}&category=${query.origin_category || ''}&subject=${query.origin_subject || ''}&year=${query.origin_year || ''}&page=${query.origin_page || 1}`
+                : '/books';
         %>
         <a href="<%= backUrl %>" class="inline-flex items-center px-4 py-2 bg-blue-600 border border-blue-700 rounded-lg text-sm font-bold text-white hover:bg-blue-700 shadow-md transition group">
             <i class="fas fa-arrow-left mr-2 text-white group-hover:-translate-x-1 transition-transform"></i> 
